--- a/shopping/package.json
+++ b/shopping/package.json
@@ -2,7 +2,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.11"
+    "jsonwebtoken": "^8.5.1"
   }
 }
