--- a/shopping/package.json
+++ b/shopping/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.1.2"
   }
 }
