--- a/shopping/package.json
+++ b/shopping/package.json
@@ -1,8 +1,14 @@
 {
+  "scripts": {
+    "prettify": "prettier --write *.js **/*.js"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "socket.io": "^4.1.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.1"
   }
 }
