--- a/shopping/package.json
+++ b/shopping/package.json
@@ -7,12 +7,14 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
-    "sequelize": "^6.6.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.16.0",
     "socket.io": "^4.1.2"
   },
   "devDependencies": {
     "jest": "^27.0.4",
     "prettier": "^2.3.1",
+    "sequelize-cli": "^6.4.1",
     "supertest": "^6.1.3"
   }
 }
