--- a/shopping2/package.json
+++ b/shopping2/package.json
@@ -4,7 +4,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.16.0"
+    "sequelize": "^6.16.0",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
